==> nandojve/embedded/stack/ATMAC-802.15.4/PAL/SAM4L/Generic/Src/pal_timer.c <==
#include <stdbool.h>
#include <stdint.h>
#include <stddef.h>
#include <stdlib.h>
#include "pal.h"
#include "return_val.h"
#include "pal_timer.h"
#include "app_config.h"

retval_t pal_start_high_priority_timer(uint8_t timer_id,
                                       uint16_t timer_count,
                                       FUNC_PTR timer_cb,
                                       void *param_cb)
{
    if (timer_id >= TOTAL_NUMBER_OF_TIMERS)
    {
        return PAL_TMR_INVALID_ID;
    }

    if (NULL == timer_cb)
    {
        return MAC_INVALID_PARAMETER;
    }

    if (NULL != timer_array[timer_id].timer_cb)
    {
        /*
         * Irrespective of the type, the timer is already running if the
         * callback function of the corresponding timer index in the timer
         * array is not NULL.
         */
        return PAL_TMR_ALREADY_RUNNING;
    }

    /*
     * A high priority timer can be started, as currently
     * there is no high priority timer running.
     */
    {
        uint32_t tc_status;

        ENTER_CRITICAL_REGION();

        high_priority_timer_id = timer_id;
        /*
         * The corresponding running timer queue's timer index is updated
         * with the new values.
         */
        timer_count = (uint32_t)(timer_count / CLOCK_PERIOD);
        timer_array[timer_id].abs_exp_timer = timer_count;
        timer_array[timer_id].timer_cb = timer_cb;
        timer_array[timer_id].param_cb = param_cb;
        timer_array[timer_id].next_timer_in_queue = NO_TIMER;

        LEAVE_CRITICAL_REGION();

        /* The clock for high prio timer is enabled here. */
        PERIPHERAL_CLOCK_ENABLE(PAL_HIGHPRIO_TIMER_PERIPH_ID);

        /* The clock is enabled at the timer level. */
        PAL_HIGHPRIO_TIMER_CCR = PAL_HIGHPRIO_TIMER_CCR_EN;

        /*
         * The status register is read to clear any pending compare match
         * interrupts.
         */
        tc_status = PAL_HIGHPRIO_TIMER_STATUS_REG;

        /* The compare register is programmed */
        PAL_HIGHPRIO_TIMER_COMP_REG = timer_count;

        /*
          * The output compare match of timer channel interrupt is
          * enabled.
          */
        PAL_HIGHPRIO_TIMER_IER = PAL_HIGHPRIO_TIMER_IER_FLAG;

        /* The timer channel interrupt in AIC is enabled. */
        NVIC_EnableIRQ(PAL_HIGHPRIO_TIMER_IRQ_ID);

        /* Reset counter and Timer channel is triggered. */
        PAL_HIGHPRIO_TIMER_CCR = TC_CCR2_SWTRG;

        /*
         * Done to avoid compiler warning about variable being not used after
         * setting.
         */
        tc_status = tc_status;
    }

    return MAC_SUCCESS;
}

retval_t pal_stop_high_priority_timer(uint8_t timer_id)
{
    retval_t timer_stop_status = PAL_TMR_NOT_RUNNING;
    uint32_t tc_status;

    ENTER_CRITICAL_REGION();

    if (timer_id == high_priority_timer_id)
    {
        /*
         * The clock to the timer channel is disabled here. It will be
         * re-enabled again while starting the high priority timer next time.
         */
        PERIPHERAL_CLOCK_DISABLE(PAL_HIGHPRIO_TIMER_PERIPH_ID);

        /* The compare match interrupt of timer channel is disabled. */
        PAL_HIGHPRIO_TIMER_IDR = PAL_HIGHPRIO_TIMER_IDR_FLAG;

        /*
         * The status register is read to clear any pending compare match
         * interrupts.
         */
        tc_status = PAL_HIGHPRIO_TIMER_STATUS_REG;

        /*
         * Done to avoid compiler warning about variable being not used after
         * setting.
         */
        tc_status = tc_status;

        /* The timer channel interrupts in AIC is disabled. */
        NVIC_DisableIRQ(PAL_HIGHPRIO_TIMER_IRQ_ID);

        timer_array[high_priority_timer_id].next_timer_in_queue = NO_TIMER;
        timer_array[high_priority_timer_id].timer_cb = NULL;
        high_priority_timer_id = NO_TIMER;

        timer_stop_status = MAC_SUCCESS;
    }

    LEAVE_CRITICAL_REGION();

    return timer_stop_status;
}

void  pal_timer_delay(uint16_t delay)
{
    /*
     * Any interrupt occurring during the delay calculation will introduce
     * additional delay and can also affect the logic of delay calculation.
     * Hence the delay implementation is put under critical region.
     */

    ENTER_CRITICAL_REGION();

    delay = (uint32_t)(delay / CLOCK_PERIOD);
    uint16_t target_time =  TIME_STAMP_LOW_REGISTER + delay;

    if (target_time > TIME_STAMP_LOW_REGISTER)
    {
        /* Target time is within current span of 16 bit count (0xFFFF). */
        while (target_time > TIME_STAMP_LOW_REGISTER)
        {
            /* No operation, till condition is met. */
        }
    }
    else
    {
        /*
         * Target time has rolled over and has gone to next span of 16 bit
         * count.
         */
        while (target_time < TIME_STAMP_LOW_REGISTER)
        {
            /* No operation, till condition is met. */
        }
        while (target_time > TIME_STAMP_LOW_REGISTER)
        {
            /* No operation, till condition is met. */
        }
    }

    LEAVE_CRITICAL_REGION();
}

static void start_absolute_timer(uint8_t timer_id,
                                 uint32_t point_in_time,
                                 FUNC_PTR handler_cb,
                                 void *parameter)
{
    ENTER_CRITICAL_REGION();

    /* Check is done to see if any timer has expired */
    internal_timer_handler();

    bool load_comp_reg = false;

    if (NO_TIMER == running_timer_queue_head)
    {
        running_timer_queue_head = timer_id;
        timer_array[timer_id].next_timer_in_queue = NO_TIMER;
        /*
         * This is the only timer running in the timer queue, hence load the
         * TC_RC register.
         */
        load_comp_reg = true;
    }
    else
    {
        uint8_t i;
        bool timer_inserted = false;
        uint8_t curr_index = running_timer_queue_head;
        uint8_t prev_index = running_timer_queue_head;

        for (i = 0; i < running_timers; i++)
        {
            if (NO_TIMER != curr_index)
            {
                if (compare_time(timer_array[curr_index].abs_exp_timer,
                                 point_in_time))
                {
                    /*
                     * Requested absolute time value is greater than the time
                     * value pointed by the curr_index in the timer array
                     */
                    prev_index = curr_index;
                    curr_index = timer_array[curr_index].next_timer_in_queue;
                }
                else
                {
                    timer_array[timer_id].next_timer_in_queue = curr_index;
                    if (running_timer_queue_head == curr_index)
                    {
                        /* Insertion at the head of the timer queue. */
                        running_timer_queue_head = timer_id;
                        /*
                         * Timer is inserted at the head of the queue, hence
                         * load the TC_RC.
                         */
                        load_comp_reg = true;
                    }
                    else
                    {
                        timer_array[prev_index].next_timer_in_queue = timer_id;
                    }
                    timer_inserted = true;
                    break;
                }
            }
        }
        if (!timer_inserted)
        {
            /* Insertion at the tail of the timer queue. */
            timer_array[prev_index].next_timer_in_queue = timer_id;
            timer_array[timer_id].next_timer_in_queue = NO_TIMER;
        }
    }
    timer_array[timer_id].abs_exp_timer = point_in_time;
    timer_array[timer_id].timer_cb = (FUNC_PTR)handler_cb;
    timer_array[timer_id].param_cb = parameter;
    running_timers++;

    /*
     * If there is only one timer in the timer queue
     * the timeout should be loaded immediately
     */
    if (load_comp_reg)
    {
        prog_comp_reg();
    }

    LEAVE_CRITICAL_REGION();
}
